# netspionage

./: netspionage.py  pyproject.toml  requirements.txt
core/: detection.py  print_output.py  prompts.py  reconnaissance.py  scanner.py
